# castor-engine

./: .gitmodules  CMakeLists.txt  README.md
src/castor-engine/: game.cpp  game.hpp  stage.cpp  stage.hpp  viewport.hpp
src/castor-engine/actor/: actor.hpp
src/common/: has_method.hpp  vec.hpp
src/example/: main.cpp
src/sound/: fade_effect.hpp  sound_engine.cpp  sound_engine.hpp  sound_engine_impl.cpp  sound_engine_impl.hpp
src/testing/: CMakeLists.txt  has_method.cpp
